--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 		<title>Usha Harish's Diet and Obesity clinic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
 		<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
-		<script src="owlcarousel/jquery.min.js"></script>
-		<script src="owlcarousel/owl.carousel.min.js"></script>
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -130,21 +128,18 @@
 						<section id="third" class="main special">
 							<header class="major">
 								<h2>Gallery</h2>
-								<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 							</header>
-
-							<div class="owl-carousel">
+							<div class="owl-carousel owl-theme">
 								<!-- Wrapper for slides -->
-									<div>
+									<div class="item">
 										<img src="images/1.JPG" alt="Los Angeles">
 									</div>
 
-									<div>
+									<div class="item">
 										<img src="images/2.jpg" alt="Chicago">
 									</div>
 
-									<div>
+									<div class="item">
 										<img src="images/3.jpg" alt="New York">
 									</div>
 								</div>
@@ -202,7 +197,9 @@
 			</div>
 
 		<!-- Scripts -->
+			<!-- script src="owlcarousel/jquery.min.js"></script -->
 			<script src="assets/js/jquery.min.js"></script>
+			<script src="owlcarousel/owl.carousel.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
