--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 							<header class="major">
 								<h2>Gallery</h2>
 							</header>
-							<div class="owl-carousel owl-theme">
+							<div class="owl-carousel owl-theme owl-wrapper-outer">
 								<!-- Wrapper for slides -->
 									<div class="item">
-										<img src="images/1.JPG" alt="Los Angeles">
+										<img src="images/1.JPG" alt="Image office">
 									</div>
 
 									<div class="item">
@@ -142,7 +142,23 @@
 									<div class="item">
 										<img src="images/3.jpg" alt="New York">
 									</div>
-								</div>
+
+									<div class="item">
+										<img src="images/4.jpg" alt="New York">
+									</div>
+
+									<div class="item">
+										<img src="images/5.jpg" alt="New York">
+									</div>
+
+									<div class="item">
+										<img src="images/6.jpg" alt="New York">
+									</div>
+
+									<div class="item">
+										<img src="images/7.jpg" alt="New York">
+									</div>
+							</div>
 						</section>
 
 
