link to testimonials page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" href="images/apple_favicon.ico">
 	</head>
 	<body class="is-preload">
 
@@ -33,7 +34,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About the Nutritionist</a></li>
 							<li><a href="#first">In the media</a></li>
-							<li><a href="#second">Testimonials</a></li>
+							<li><a href="testimonials.html">Testimonials</a></li>
 							<li><a href="#cta">Book Appointment</a></li>
 						</ul>
 					</nav>
