Updated Link to Testimonials page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About the Nutritionist</a></li>
 							<li><a href="#first">In the media</a></li>
-							<li><a href="testimonials.html">Testimonials</a></li>
+							<li><a href="#second">Testimonials</a></li>
 							<li><a href="#cta">Book Appointment</a></li>
 						</ul>
 					</nav>
@@ -92,9 +92,9 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Testimonials</h2>
+									<p>To learn more about what my clients have to say.</p>
+									<a href="testimonials.html" class="button"> Click here</a>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
