Updates to Icons

--- a/testimonials.html
+++ b/testimonials.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Testimonials</h1>
-						<p>Don't believe me? <br>Read what my clients have to say</p>
+						<p>Read what my clients have to say</p>
 					</header>
 
 				<!-- Main -->
