Ädding media and removing excess items

--- a/testimonials.html
+++ b/testimonials.html
@@ -41,24 +41,86 @@
 						<!-- third Section -->
 						<section id="third" class="main special">
 							<header class="major">
-								<img class = "testimonial_pic" src="images/Testimonial_test.jpg" alt="Profile Pic" align="left">
-								<h1 style="text-align:center;"><b>" I lost 10 Kgs ! "</b></h1>
+								<img class = "testimonial_pic" src="images/suhas.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"My lifestyle changed! "</b></h1>
 
-								<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.<br>
-									<span class = "customer_name"><em> - Tina </em></span></p>
+								<p>My name is suhas, I'm from Bangalore. When I first started my journey of my weight loss,I was not confident whether I would lose weight or not.I weighed 140kgs.I had been trying from many years to lose weight but ,every mornings I would go on a diet and in the evening end up breaking it. Later when I had lost all hopes , I thought of giving it one last try. When I first started my weight loss journey ,my first target was to lose 2kgs n a week, and a week late when I weighed myself I had lost 4kgs in a very miraculous way. At that moment my confidence boosted up to the sky. From then on I never looked back on that part of my life. From that day on I have continueously losing my weight in a very healthy way without any anabolic or catabolic steroids or supplements. And ,I have successfully lost 30kgs of weight. I am very thankful to Mrs.Usha Harish for her weight loss diet programs . Now I am very much confident that I can maintain my physique with the right diet and proper workout.<br>
+									<span class = "customer_name"><em> - Suhas </em></span></p>
+							</header>
+						</section>
+
+						<section id="third" class="main special">
+							<header class="major">
+								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"My lifestyle changed! "</b></h1>
+
+								<p>I would like to thank you for helping me reduce my weight.
+									My life style being unplanned, irregular eating habits, post pregnancy, all together lead to overweight. I strictly followed your diet plan of eating lots of fiber in the form of vegetables and fruits.From you, I have realized that one cannot lose weight overnight and requires a lot of patience, discipline and dedication. With continuous encouragement and the support from my husband helped me through the journey of losing weight.The weight loss also brought the positive side of myself.
+									<br>
+									<span class = "customer_name"><em> - Shilpa </em></span></p>
 							</header>
 						</section>
 
 
 						<section id="third" class="main special">
 							<header class="major">
-								<img class = "testimonial_pic" src="images/Testimonial_test.jpg" alt="Profile Pic" align="left">
-								<h1 style="text-align:center;" ><b>" So Easy... "</b></h1>
+								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;" ><b>" I lost weight and also feel very healthy..."</b></h1>
 
-								<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.<br>
-									<span class = "customer_name"><em> - Abhi</em></span></p>
+								<p>You and my friends Veena and Chandrika were a source of inspiration for the weight loss program. You Particularly made the impossible
+									possible. I had accepted my obesity as something which i have to live with but everything changed after consulting you. Seeing my friend Veena losing weight i was inspired by her to consult you.
+
+									Little hesitant at first but somehow making up my mind i came to you hoping of losing some weight. But speaking to you for the first time gave me some hope that i climbed up the first step of losing weight. After the counselling session with you i felt relaxed and got the confidence that i can do it.
+
+									I strictly followed your diet plan of eating lots of fiber in the form of vegetables and fruits. The myth that diet means starving was proved wrong. Every two hours i was eating as per your instructions. The diet involved almost everything fruits, vegetables,rice, rotis , dosas soup, milk, curd etc. This is when i realized that it is not eating but EATING RIGHT along with a hour's workout is the secret behind a healthy weight loss. The result: In the first week i lost 2kg that really motivated me .  As i continued my diet my weight loss became visible and everyone around noticed it and that was an additional motivation.  I continued the session and within  a span of five and half months i lost about 21 kgs and I realized that nothing is impossible if you are determined to achieve it.
+
+									The most important thing is you meet the right person to help you like i had a mentor Mrs. USHA HARISH  and follow their instructions. You must change your life style particularly  in what we eat that is EAT RIGHT.  I did it and i have not only lost weight but now i can walk a long distance without feeling tired, my legs don't swell up like how it used and most important i had a severe thyroid problem and now my thyroid parameters are normal.  My sincere thanks to Mrs. Usha Harish who helped me in achieving this.<br>
+									<span class = "customer_name"><em> - Jayanthi Pandit</em></span></p>
+							</header>
+						</section>
+
+						<section id="third" class="main special">
+							<header class="major">
+								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"really helped me a lots "</b></h1>
+
+								<p>Thank u very much for your valuable course to reduce weight. -
+
+									Before weight-80 kgs
+
+									After  course weight-70 kgs
+
+
+									Total 10 kgs in just 8 weeks
+
+									it is really helped me a lot .<br>
+									<span class = "customer_name"><em> - Rajini kumar </em></span></p>
+							</header>
+						</section>
+						<section id="third" class="main special">
+							<header class="major">
+								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"carefully curated diet plans"</b></h1>
+
+								<p>I am Vaishnavi. I joined the course for 3 months and successfully lost 6 kgs. I feel the carefully curated diet plans each week according to my work schedule and health conditions really helped me lose weight. Not only this, I also feel healthier and can definitely judge an increase in my stamina. I am grateful to Dt.Usha Harish for guiding me through the process. The advices I received will stay with me for a long time to go. <br>
+									<span class = "customer_name"><em> - Vaishnavi </em></span></p>
+							</header>
+						</section>
+						<section id="third" class="main special">
+							<header class="major">
+								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"my lipids has come down, and sugar level has come down "</b></h1>
+
+								<p>My name is k.v.vishwanath prasad, aged 58yrs height 5.ft 11 inches wt 86 kgs, i used to
+									come to Raga skin clinic with wife monthly once when i am waiting in the loby for our turn,
+									i used see this board reduce 10 to 12 kgs within 3 months, as i was trying to reduce
+									12 kgs overweight but i was not able to reduce atleast 2 or 3 kgs i have colestral,and my sugar was in border line, in spite of playing badminton for 3 days walking for 3 days so i  took one consultation i was immpressed by the way mrs usha was giving the consultation
+									then took the package for 3 months , and was fallowing her instructions and now i have
+									reduced about 10 kgs, my lipids has come down, and sugar level has come down,
+									i feeling very light, but now i have maintain this, this result i have gained without any
+									crash diet with only permutation and combination with the food i was having.
+									thankyou very much usha.<br>
+									<span class = "customer_name"><em> - k.v.vishwanath prasad </em></span></p>
 							</header>
 						</section>
 
@@ -71,31 +133,31 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>For Consultation or Appointments</h2>
+							<p>Please contact the clinic for any appointments regarding consultations or programs</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
+								<!--li><a href="#" class="button">Learn More</a></li-->
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Diet and Obesity Clinic</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dd>No. 63, Ground Floor, Doctor’s Plaza, Subramanyapura Main Road, Opp. Kadirenahalli, Banashankari Stage II, Bengaluru, Karnataka 560061</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>080 - 26392344</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="#">ushaharish.diet@gmail.com</a></dd>
 							</dl>
-							<ul class="icons">
+							<!--ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
+							</ul-->
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
