--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 
-						<span class="logo"><img src="images/nutritionist.svg" alt="" /></span>
-						<h1>Diet and Obesity clinic</h1>
-						<p><b>Dt. Usha Harish</b><br />
-						Get Healthy by Eating Right <br></p>
+						<!--span class="logo"><img src="images/nutritionist.svg" alt="" /></span-->
+						<h1 style = "font-family:georgia,garamond,serif;font-size:70px;font-style:italic;"><img src="images/nutritionist.svg" alt="" style="float: left;" width="16%"/>Diet And Obesity Clinic</h1>
+						<p>
+							<b>Dt. Usha Harish</b>
+							<br>Get Healthy by Eating Right <br></p>
 					</header>
 
 				<!-- Nav -->
@@ -52,41 +53,41 @@
 										<p>Dt. Usha Harish has been working as a clinical nutritionist for over 20 years.
 											She specialises in weight loss and treating obesity.
 											She has completed her B.Sc, M.sc in Food and Nutrition, and CFN from Indira Gandhi National Open University (IGNOU). </p>
-										<ul class="actions">
+										<!--ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										</ul-->
 									</div>
-									<span class="image"><img src="images/thumbnail.jpg" alt="" /></span>
+									<span class="image"><img src="images/Usha_Harish.png" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>In the media</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon solid major style1 fa-newspaper"></span>
+										<h3>Vijaya Karnataka Newspaper</h3>
+										<p>Dt. Usha Harish was a columnist for Vijaya Karnataka newspaper. She published a food and nutrition articles for many years. </p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style3 fa-tv"></span>
+										<h3>News Channels on TV</h3>
+										<p>Usha has also appeared in many news channels such as Suvarna news, TV9, DD news, and Udaya news. She appeared as a food and nutrition expert for different topics. </p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style5 fa-microphone-alt"></span>
+										<h3>Live Talks for VK / Times</h3>
+										<p>Dt. Usha Harish has given many talks on the importance of balanced diets in various venues in Bangalore. </p>
 									</li>
 								</ul>
-								<footer class="major">
+								<!--footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer-->
 							</section>
 
 						<!-- Second Section -->
@@ -162,14 +163,13 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Contact us</h2>
+									<p></p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="#footer" class="button primary">Get Started</a></li>
+										<!--li><a href="generic.html" class="button">Learn More</a></li-->
 									</ul>
 								</footer>
 							</section>
@@ -177,34 +177,34 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+				<footer id="footer">
+					<section>
+						<h2>For Consultation or Appointments</h2>
+						<p>Please contact the clinic for any appointments regarding consultations or programs</p>
+						<ul class="actions">
+							<!--li><a href="#" class="button">Learn More</a></li-->
+						</ul>
+					</section>
+					<section>
+						<h2>Diet and Obesity Clinic</h2>
+						<dl class="alt">
+							<dt>Address</dt>
+							<dd>No. 63, Ground Floor, Doctor’s Plaza, Subramanyapura Main Road, Opp. Kadirenahalli, Banashankari Stage II, Bengaluru, Karnataka 560061</dd>
+							<dt>Phone</dt>
+							<dd>080 - 26392344</dd>
+							<dt>Email</dt>
+							<dd><a href="#">ushaharish.diet@gmail.com</a></dd>
+						</dl>
+						<!--ul class="icons">
+                            <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+                            <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+                            <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+                            <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+                            <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+                        </ul-->
+					</section>
+					<p class="copyright">&copy; Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+				</footer>
 
 			</div>
 
