--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 		<title>Usha Harish's Diet and Obesity clinic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
-		<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" href="images/apple_favicon.ico">
@@ -24,10 +22,13 @@
 					<header id="header" class="alt">
 
 						<!--span class="logo"><img src="images/nutritionist.svg" alt="" /></span-->
-						<h1 style = "font-family:georgia,garamond,serif;font-size:70px;font-style:italic;"><img src="images/nutritionist.svg" alt="" style="float: left;" width="16%"/>Diet And Obesity Clinic</h1>
-						<p>
+						<h1 style = "font-family:georgia;font-size:65px;color:#f5e1f2;"><img src="images/nutritionist.svg" alt="" style="float: left;" width="16%"/>Diet And Obesity Clinic</h1>
+
+						<h3 style = 'color:white'>
 							<b>Dt. Usha Harish</b>
-							<br>Get Healthy by Eating Right <br></p>
+							<br>
+							<span style = "font-family: 'Lucida Console', 'Courier New', monospace;">Get Healthy by Eating Right</span>
+						</h3>
 					</header>
 
 				<!-- Nav -->
@@ -73,16 +74,129 @@
 										<p>Dt. Usha Harish was a columnist for Vijaya Karnataka newspaper. She published a food and nutrition articles for many years. </p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-tv"></span>
-										<h3>News Channels on TV</h3>
+										<span class="icon solid major style3 fa-tv"></span>
+										<h3>News Channels on Television</h3>
 										<p>Usha has also appeared in many news channels such as Suvarna news, TV9, DD news, and Udaya news. She appeared as a food and nutrition expert for different topics. </p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-microphone-alt"></span>
+										<span class="icon solid major style5 fa-microphone-alt"></span>
 										<h3>Live Talks for VK / Times</h3>
 										<p>Dt. Usha Harish has given many talks on the importance of balanced diets in various venues in Bangalore. </p>
 									</li>
 								</ul>
+
+								<!-- Carousel for media articles -->
+								<div id="myCarousel2" class="carousel slide" data-ride="carousel" >
+									<!-- Indicators -->
+									<ol class="carousel-indicators">
+										<li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
+										<li data-target="#myCarousel2" data-slide-to="1"></li>
+										<li data-target="#myCarousel2" data-slide-to="2"></li>
+										<li data-target="#myCarousel2" data-slide-to="3"></li>
+										<li data-target="#myCarousel2" data-slide-to="4"></li>
+										<li data-target="#myCarousel2" data-slide-to="5"></li>
+										<li data-target="#myCarousel2" data-slide-to="6"></li>
+										<li data-target="#myCarousel2" data-slide-to="7"></li>
+										<li data-target="#myCarousel2" data-slide-to="8"></li>
+										<li data-target="#myCarousel2" data-slide-to="9"></li>
+										<li data-target="#myCarousel2" data-slide-to="10"></li>
+										<li data-target="#myCarousel2" data-slide-to="11"></li>
+										<li data-target="#myCarousel2" data-slide-to="12"></li>
+										<li data-target="#myCarousel2" data-slide-to="13"></li>
+										<li data-target="#myCarousel2" data-slide-to="14"></li>
+										<li data-target="#myCarousel2" data-slide-to="15"></li>
+										<li data-target="#myCarousel2" data-slide-to="16"></li>
+										<li data-target="#myCarousel2" data-slide-to="17"></li>
+										<li data-target="#myCarousel2" data-slide-to="18"></li>
+
+									</ol>
+
+									<!-- Wrapper for slides -->
+									<div class="carousel-inner" role="listbox" style="width:100%; height: 500px !important;">
+										<div class="item active">
+											<img src="images/Article1.jpg" alt="Los Angeles" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article2.jpg" alt="Chicago" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article3.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article4.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article5.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article6.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article7.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article8.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article9.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article10.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article11.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article12.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article13.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article14.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article15.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article16.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article17.jpg" alt="New York" >
+										</div>
+
+										<div class="item">
+											<img src="images/Article18.jpg" alt="New York" >
+										</div>
+									</div>
+
+									<!-- Left and right controls -->
+									<a class="left carousel-control" href="#myCarousel2" data-slide="prev">
+										<span class="glyphicon glyphicon-chevron-left"></span>
+										<span class="sr-only">Previous</span>
+									</a>
+									<a class="right carousel-control" href="#myCarousel2" data-slide="next">
+										<span class="glyphicon glyphicon-chevron-right"></span>
+										<span class="sr-only">Next</span>
+									</a>
+								</div>
+
 								<!--footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
@@ -120,14 +234,65 @@
 									</li>
 								</ul>
 
+
 							</section>
 						<!-- third Section -->
 						<section id="third" class="main special">
 							<header class="major">
 								<h2>Gallery</h2>
 							</header>
-							<div class="owl-carousel owl-theme owl-wrapper-outer">
+							<div id="myCarousel" class="carousel slide" data-ride="carousel" >
+								<!-- Indicators -->
+								<ol class="carousel-indicators">
+									<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+									<li data-target="#myCarousel" data-slide-to="1"></li>
+									<li data-target="#myCarousel" data-slide-to="2"></li>
+									<li data-target="#myCarousel" data-slide-to="3"></li>
+									<li data-target="#myCarousel" data-slide-to="4"></li>
+									<li data-target="#myCarousel" data-slide-to="5"></li>
+									<li data-target="#myCarousel" data-slide-to="6"></li>
+
+								</ol>
+
 								<!-- Wrapper for slides -->
+								<div class="carousel-inner" role="listbox" style="width:100%; height: 500px !important;">
+									<div class="item active">
+										<img src="images/1.JPG" alt="Los Angeles" >
+									</div>
+
+									<div class="item">
+										<img src="images/2.JPG" alt="Chicago" >
+									</div>
+
+									<div class="item">
+										<img src="images/3.JPG" alt="New York" >
+									</div>
+
+									<div class="item">
+										<img src="images/4.jpg" alt="New York" >
+									</div>
+
+									<div class="item">
+										<img src="images/5.jpg" alt="New York" >
+									</div>
+
+									<div class="item">
+										<img src="images/6.jpg" alt="New York" >
+									</div>
+								</div>
+
+								<!-- Left and right controls -->
+								<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+									<span class="glyphicon glyphicon-chevron-left"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="right carousel-control" href="#myCarousel" data-slide="next">
+									<span class="glyphicon glyphicon-chevron-right"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+							<!--div class="owl-carousel owl-theme owl-wrapper-outer">
+								< Wrapper for slides >
 									<div class="item">
 										<img src="images/1.JPG" alt="Image office">
 									</div>
@@ -155,7 +320,7 @@
 									<div class="item">
 										<img src="images/7.jpg" alt="New York">
 									</div>
-							</div>
+							</div-->
 						</section>
 
 
@@ -177,15 +342,15 @@
 					</div>
 
 				<!-- Footer -->
-				<footer id="footer">
-					<section>
+				<footer id="footer" >
+					<section style="color:#f5e1f2">
 						<h2>For Consultation or Appointments</h2>
 						<p>Please contact the clinic for any appointments regarding consultations or programs</p>
 						<ul class="actions">
 							<!--li><a href="#" class="button">Learn More</a></li-->
 						</ul>
 					</section>
-					<section>
+					<section style="color:#f5e1f2;">
 						<h2>Diet and Obesity Clinic</h2>
 						<dl class="alt">
 							<dt>Address</dt>
@@ -210,8 +375,11 @@
 
 		<!-- Scripts -->
 			<!-- script src="owlcarousel/jquery.min.js"></script -->
+		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="owlcarousel/owl.carousel.min.js"></script>
+			<!--script src="owlcarousel/owl.carousel.min.js"></script-->
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
