--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
 									</a>
 								</div>
 
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/Wnjs-MQx2Dg?start=369" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 								<!--footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
@@ -255,7 +257,7 @@
 								</ol>
 
 								<!-- Wrapper for slides -->
-								<div class="carousel-inner" role="listbox" style="width:100%; height: 500px !important;">
+								<div class="carousel-inner" role="listbox" style="width:100%; height: 100% !important;">
 									<div class="item active">
 										<img src="images/1.JPG" alt="Los Angeles" >
 									</div>
@@ -264,7 +266,7 @@
 										<img src="images/2.JPG" alt="Chicago" >
 									</div>
 
-									<div class="item">
+									<div class="item" style="width:100%; height: 500px !important;">
 										<img src="images/3.JPG" alt="New York" >
 									</div>
 
@@ -273,7 +275,7 @@
 									</div>
 
 									<div class="item">
-										<img src="images/5.jpg" alt="New York" >
+										<img src="images/5.jpg" alt="New York"  >
 									</div>
 
 									<div class="item">
@@ -356,7 +358,7 @@
 							<dt>Address</dt>
 							<dd>No. 63, Ground Floor, Doctor’s Plaza, Subramanyapura Main Road, Opp. Kadirenahalli, Banashankari Stage II, Bengaluru, Karnataka 560061</dd>
 							<dt>Phone</dt>
-							<dd>080 - 26392344</dd>
+							<dd>+919845738004</dd>
 							<dt>Email</dt>
 							<dd><a href="#">ushaharish.diet@gmail.com</a></dd>
 						</dl>
