--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 									</a>
 								</div>
 
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/Wnjs-MQx2Dg?start=369" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe width="560" height="315" style="padding:1px;border:1px solid black;" src="https://www.youtube.com/embed/Wnjs-MQx2Dg?start=369" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 								<!--footer class="major">
 									<ul class="actions special">
