added padding to youtube video

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 										<img src="images/2.JPG" alt="Chicago" >
 									</div>
 
-									<div class="item" style="width:100%; height: 500px !important;">
+									<div class="item">
 										<img src="images/3.JPG" alt="New York" >
 									</div>
 
