--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									</ol>
 
 									<!-- Wrapper for slides -->
-									<div class="carousel-inner" role="listbox" style="width:100%; height: 500px !important;">
+									<div class="carousel-inner" role="listbox" style="width:100%; height: 100% !important;">
 										<div class="item active">
 											<img src="images/Article1.jpg" alt="Los Angeles" >
 										</div>
@@ -197,7 +197,7 @@
 									</a>
 								</div>
 
-								<iframe width="560" height="315" style="padding:5px;" src="https://www.youtube.com/embed/Wnjs-MQx2Dg?start=369" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe width="560" height="315" style="padding:15px;" src="https://www.youtube.com/embed/Wnjs-MQx2Dg?start=369" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 								<!--footer class="major">
 									<ul class="actions special">
