--- a/testimonials.html
+++ b/testimonials.html
@@ -31,7 +31,7 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<span class="image main"><img src="images/review.jpg" alt="" /></span>
-								<h2><strong>Real Stories from Real People . . .</strong></h2>
+								<h2><strong>Real Stories from Real People ...</strong></h2>
 								<p>In a world filled with misleading advertisements and lies about quick and easy weight loss gimmicks,
 									I understand the value of having a <b><em><u>healthy and sustainable</u></em></b> eating routine that you can stick to.
 									Below you can find real stories from my clients in their journey to attaining a healthy lifestyle.</p>
@@ -51,11 +51,17 @@
 
 						<section id="third" class="main special">
 							<header class="major">
-								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
-								<h1 style="text-align:center;"><b>"My lifestyle changed! "</b></h1>
+								<img class = "testimonial_pic" src="images/bodypositive.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"The weight loss also brought the positive side of myself!"</b></h1>
 
 								<p>I would like to thank you for helping me reduce my weight.
-									My life style being unplanned, irregular eating habits, post pregnancy, all together lead to overweight. I strictly followed your diet plan of eating lots of fiber in the form of vegetables and fruits.From you, I have realized that one cannot lose weight overnight and requires a lot of patience, discipline and dedication. With continuous encouragement and the support from my husband helped me through the journey of losing weight.The weight loss also brought the positive side of myself.
+									My life style being unplanned,
+									 irregular eating habits, post pregnancy, all together lead to overweight.
+									  I strictly followed your diet plan of eating lots of fiber in the form of vegetables and fruits.
+									  From you, I have realized that one cannot lose weight overnight and requires a lot of patience,
+									  discipline and dedication. 
+									  With continuous encouragement and the support from my husband helped me through the journey of losing weight.
+									  The weight loss also brought the positive side of myself.
 									<br>
 									<span class = "customer_name"><em> - Shilpa </em></span></p>
 							</header>
@@ -64,7 +70,7 @@
 
 						<section id="third" class="main special">
 							<header class="major">
-								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
+								<img class = "testimonial_pic" src="images/eathealthy.jpg" alt="Profile Pic" align="left">
 								<h1 style="text-align:center;" ><b>" I lost weight and also feel very healthy..."</b></h1>
 
 								<p>You and my friends Veena and Chandrika were a source of inspiration for the weight loss program. You Particularly made the impossible
@@ -81,8 +87,8 @@
 
 						<section id="third" class="main special">
 							<header class="major">
-								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
-								<h1 style="text-align:center;"><b>"really helped me a lots "</b></h1>
+								<img class = "testimonial_pic" src="images/weightloss.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>" It really helped me a lot! "</b></h1>
 
 								<p>Thank u very much for your valuable course to reduce weight. -
 
@@ -99,8 +105,8 @@
 						</section>
 						<section id="third" class="main special">
 							<header class="major">
-								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
-								<h1 style="text-align:center;"><b>"carefully curated diet plans"</b></h1>
+								<img class = "testimonial_pic" src="images/dietplans.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"Carefully Curated diet plans"</b></h1>
 
 								<p>I am Vaishnavi. I joined the course for 3 months and successfully lost 6 kgs. I feel the carefully curated diet plans each week according to my work schedule and health conditions really helped me lose weight. Not only this, I also feel healthier and can definitely judge an increase in my stamina. I am grateful to Dt.Usha Harish for guiding me through the process. The advices I received will stay with me for a long time to go. <br>
 									<span class = "customer_name"><em> - Vaishnavi </em></span></p>
@@ -108,8 +114,8 @@
 						</section>
 						<section id="third" class="main special">
 							<header class="major">
-								<img class = "testimonial_pic" src="images/person_icon.jpg" alt="Profile Pic" align="left">
-								<h1 style="text-align:center;"><b>"my lipids has come down, and sugar level has come down "</b></h1>
+								<img class = "testimonial_pic" src="images/cholesterol.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"My Lipids & Sugar level has come down !" </b></h1>
 
 								<p>My name is k.v.vishwanath prasad, aged 58yrs height 5.ft 11 inches wt 86 kgs, i used to
 									come to Raga skin clinic with wife monthly once when i am waiting in the loby for our turn,
@@ -120,7 +126,56 @@
 									i feeling very light, but now i have maintain this, this result i have gained without any
 									crash diet with only permutation and combination with the food i was having.
 									thankyou very much usha.<br>
-									<span class = "customer_name"><em> - k.v.vishwanath prasad </em></span></p>
+									<span class = "customer_name"><em> - K.V.Vishwanath Prasad </em></span></p>
+							</header>
+						</section>
+
+
+						<section id="third" class="main special">
+							<header class="major">
+								<img class = "testimonial_pic" src="images/diabetes.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"My experience was wonderful.<br>It helped me manage my diabetes!"</b></h1>
+
+								<p>I took the 3 months healthy deit course and I found it is very helpful.
+									My experience was wonderful. Also it helped me to manage my diabities.
+									I started with my HbA1c 7.4 and when I completed the course it came down to 5.7.
+									If we follow what Dr.Usha advises then I am sure we can achieve what we want.
+									Doctor explains in detail and weekly consultation will be for status review of the previous week.
+									At the end of the course she also explains and make us understand how we have to maintain this going foward.
+									This way it will help us to maintain and I feel it is kind of clear knowledge transfer.
+									I really thank Dr.Usha Harish for helping me learn about healthy lifestyle.<br>
+									<span class = "customer_name"><em> - Dinesh Hegde <p>[Verified Patient (@Practo)]</p> </em></span></p>
+							</header>
+						</section>
+
+
+						<section id="third" class="main special">
+							<header class="major">
+								<img class = "testimonial_pic" src="images/postpartum.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"Postpartum Weight Loss: She made sure that I was eating enough and covered all nutrients required for both me and my baby!"</b></h1>
+
+								<p>Postpartum weight loss:
+									I had consusted Dr.Usha once before as well and had lost 12 kg in 3 months.
+									This time 3 months postpartum I was stuck at same weight even though I was eating right and exercising.
+									Probably becauseof the harmonal changes. So, I decided to consult again and I am glad to say I have lost <b>11kg.</b>
+									The diet and exercise helped me gain strength and it did not affect my baby in the least.
+									She made sure that I was eating enough and covered all the nutrients required for both me and baby.
+									I was reducing weight and my baby was gaining as expected. I do highly recommend her<br>
+									 <p> - [Verified Patient (@Practo)]</p>
+							</header>
+						</section>
+
+
+						<section id="third" class="main special">
+							<header class="major">
+								<img class = "testimonial_pic" src="images/moneyvalue.jpg" alt="Profile Pic" align="left">
+								<h1 style="text-align:center;"><b>"Value for Money! I have lost 18 kgs."</b></h1>
+
+								<p>I have been under Dr. Usha's treatment for the past eight months and have lost 18 kgs.
+									She is a very patient and encouraging doctor. 
+									She has helped many of my friends too. Certainly a very good doctor and a nice person.
+									Happy with the value for money too!<br>
+									<span class = "customer_name"><em> - Hema Ashwath <p>[Verified Patient (@Practo)]</p> </em></span></p>
 							</header>
 						</section>
 
