--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										</header>
 										<p>Dt. Usha Harish has been working as a clinical nutritionist for over 20 years.
 											She specialises in weight loss and treating obesity.
-											She has completed her B.Sc, M.sc in Food and Nutrition, and CFN from Indira Gandhi National Open University (IGNOU). </p>
+											She has completed her Masters in Food and Nutrition with specialization in DFSM and CFN. </p>
 										<!--ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul-->
