Update index.html with Dr

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Usha Harish's Diet and Obesity clinic</title>
+		<title>Dr. Usha Harish's Diet and Obesity clinic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 						<h1 style = "font-family:georgia;font-size:65px;color:#f5e1f2;"><img src="images/nutritionist.svg" alt="" style="float: left;" width="16%"/>Diet And Obesity Clinic</h1>
 
 						<h3 style = 'color:white'>
-							<b>Dt. Usha Harish</b>
+							<b>Dr. Usha Harish</b>
 							<br>
 							<span style = "font-family: 'Lucida Console', 'Courier New', monospace;">Get Healthy by Eating Right</span>
 						</h3>
@@ -49,9 +49,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Dt. Usha Harish</h2>
+											<h2>Dr. Usha Harish</h2>
 										</header>
-										<p>Dt. Usha Harish has been working as a clinical nutritionist for over 20 years.
+										<p>Dr. Usha Harish has been working as a clinical nutritionist for over 20 years.
 											She specialises in weight loss and treating obesity.
 											She has completed her Masters in Food and Nutrition with specialization in DFSM and CFN. </p>
 										<!--ul class="actions">
@@ -71,7 +71,7 @@
 									<li>
 										<span class="icon solid major style1 fa-newspaper"></span>
 										<h3>Vijaya Karnataka Newspaper</h3>
-										<p>Dt. Usha Harish was a columnist for Vijaya Karnataka newspaper. She published a food and nutrition articles for many years. </p>
+										<p>Dr. Usha Harish was a columnist for Vijaya Karnataka newspaper. She published a food and nutrition articles for many years. </p>
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-tv"></span>
@@ -81,7 +81,7 @@
 									<li>
 										<span class="icon solid major style5 fa-microphone-alt"></span>
 										<h3>Live Talks for VK / Times</h3>
-										<p>Dt. Usha Harish has given many talks on the importance of balanced diets in various venues in Bangalore. </p>
+										<p>Dr. Usha Harish has given many talks on the importance of balanced diets in various venues in Bangalore. </p>
 									</li>
 								</ul>
 
