Update testimonials.html with Dr

--- a/testimonials.html
+++ b/testimonials.html
@@ -108,7 +108,7 @@
 								<img class = "testimonial_pic" src="images/dietplans.jpg" alt="Profile Pic" align="left">
 								<h1 style="text-align:center;"><b>"Carefully Curated diet plans"</b></h1>
 
-								<p>I am Vaishnavi. I joined the course for 3 months and successfully lost 6 kgs. I feel the carefully curated diet plans each week according to my work schedule and health conditions really helped me lose weight. Not only this, I also feel healthier and can definitely judge an increase in my stamina. I am grateful to Dt.Usha Harish for guiding me through the process. The advices I received will stay with me for a long time to go. <br>
+								<p>I am Vaishnavi. I joined the course for 3 months and successfully lost 6 kgs. I feel the carefully curated diet plans each week according to my work schedule and health conditions really helped me lose weight. Not only this, I also feel healthier and can definitely judge an increase in my stamina. I am grateful to Dr.Usha Harish for guiding me through the process. The advices I received will stay with me for a long time to go. <br>
 									<span class = "customer_name"><em> - Vaishnavi </em></span></p>
 							</header>
 						</section>
